clang/test/BSC/Negative/Ownership/RuleCheck/rewrite_bsc_owned1/rewrite_bsc_owned1.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

struct A {
    _Owned int a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int _Owned b; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int _Owned * c; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int* _Owned d;
    int* _Owned* _Owned e;
};

void ownedTest0() {
    int _Owned a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int* _Owned b;
    int* _Owned * _Owned d;
    return;
}

int* _Owned ownedTest2(int* _Owned p) {
    return p;
}

int main() {
    return 0;
}
